[gd_scene load_steps=5 format=3 uid="uid://wgy1xfuyfvm2"]

[ext_resource type="Script" path="res://scripts/mini_games/MiniGame.gd" id="1_vlw88"]
[ext_resource type="Texture2D" uid="uid://dylewl2lgpsng" path="res://content/sprites/white_box.png" id="2_dkbf8"]
[ext_resource type="Script" path="res://scripts/mini_games/MiniGameLine.gd" id="3_t4oj8"]

[sub_resource type="Curve" id="Curve_64cn4"]
_data = [Vector2(0, 0), 0.0, 0.0254565, 0, 0, Vector2(1, 1), 3.26408, 0.0, 0, 0]
point_count = 2

[node name="MiniGame" type="Node2D"]
script = ExtResource("1_vlw88")
key_to_trigger = 32
trigger_zone_pos = 0.6
trigger_zone_width = 0.3
speed = 1.5
curve = SubResource("Curve_64cn4")

[node name="ProgressBar" type="Sprite2D" parent="." node_paths=PackedStringArray("cursor", "trigger_zone")]
modulate = Color(0.701961, 0.701961, 0.701961, 1)
scale = Vector2(2, 0.188)
texture = ExtResource("2_dkbf8")
centered = false
script = ExtResource("3_t4oj8")
cursor = NodePath("../ProgressCursor")
trigger_zone = NodePath("../TriggerZone")

[node name="TriggerZone" type="Sprite2D" parent="."]
modulate = Color(0.741176, 0.0352941, 0.317647, 1)
position = Vector2(23, 0)
scale = Vector2(0.375, 0.1875)
texture = ExtResource("2_dkbf8")
centered = false

[node name="ProgressCursor" type="Sprite2D" parent="."]
modulate = Color(0.509804, 0.403922, 1, 1)
position = Vector2(0, -2)
scale = Vector2(0.125, 0.4375)
texture = ExtResource("2_dkbf8")
centered = false

[connection signal="on_changed_value" from="." to="ProgressBar" method="_on_mini_game_on_changed_value"]
[connection signal="on_started" from="." to="ProgressBar" method="_on_mini_game_on_started"]
[connection signal="on_triggered" from="." to="ProgressBar" method="_on_mini_game_on_triggered"]
